--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
 - pip install mkdocs
 - pip install MarkdownHighlight
 script:
-- openssl aes-256-cbc -K $encrypted_4b3c9676656c_key -iv $encrypted_4b3c9676656c_iv -in deploy-key.enc -out deploy-key -d
+- openssl aes-256-cbc -K $encrypted_4b3c9676656c_key -iv $encrypted_4b3c9676656c_iv -in deploy_key.enc -out deploy-key -d
 - chmod 600 deploy_key
 - eval `ssh-agent -s`
 - ssh-add deploy-key
