--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ before_script:
 - pip install mkdocs
 - pip install MarkdownHighlight
 script:
-- openssl aes-256-cbc -K $encrypted_4b3c9676656c_key -iv $encrypted_4b3c9676656c_iv -in deploy_key.enc -out deploy-key -d
+- openssl aes-256-cbc -K $encrypted_4b3c9676656c_key -iv $encrypted_4b3c9676656c_iv -in deploy_key.enc -out deploy_key -d
 - chmod 600 deploy_key
 - eval `ssh-agent -s`
-- ssh-add deploy-key
+- ssh-add deploy_key
 - git config user.name "Automatic Publish"
 - git config user.email "djw8605@gmail.com"
 - git remote add gh-token "${GH_REF}";
