Fix page title.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: OSG Documentation
+site_name: OSG Council Working Homepage
 site_url: https://opensciencegrid.github.io/council
 repo_url: https://github.com/opensciencegrid/council
 theme: readthedocs
