Convert action items to markdown.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ extra_css:
 pages:
 - Home: 'index.md'
 - By-Laws: 'OpenScienceGridBylaws.md'
+- Action Items: 'CouncilActionItems.md'
 - Membership: 'Members.md'
 
 markdown_extensions:
