--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
 site_name: OSG Council Working Homepage
-site_url: https://opensciencegrid.github.io/council
-repo_url: https://github.com/opensciencegrid/council
-theme: readthedocs
+site_url: https://opensciencegrid.github.io/council/
+repo_url: https://github.com/opensciencegrid/council/
+theme: 
+  name: readthedocs
 
 extra_css:
   - css/extra.css
