--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ theme:
   name: material
   custom_dir: theme-customizations
 
-pages:
+nav:
 - Home: 'index.md'
 - By-Laws: 'OpenScienceGridBylaws.md'
 - Membership: 'Members.md'
@@ -16,5 +16,4 @@ pages:
 
 markdown_extensions:
   - admonition
-  - osg_markdown.colors
 
