unlinking stale information until it can be updated

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,12 +7,8 @@ theme:
 
 nav:
 - Home: 'index.md'
-- By-Laws: 'OpenScienceGridBylaws.md'
 - Membership: 'Members.md'
-- Voting Procedures: 'OpenScienceGridConsortiumVotingProcedures.md'
-- Management Plan: 'OpenScienceGridManagementPlan.md'
-- Member Expectations: 'MemberExpectations.md'
-- Action Items: 'CouncilActionItems.md'
+- Meetings: 'Meetings.md'
 
 markdown_extensions:
   - admonition
