more cosmetics, spurious language removal

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: OSG Council Working Homepage
+site_name: OSG Council
 site_url: https://opensciencegrid.org/council/
 repo_url: https://github.com/opensciencegrid/council/
 theme: 
