Point at the new domain and repo
Change the site_url and repo_url in the config file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: OSG Council
-site_url: https://opensciencegrid.org/council/
-repo_url: https://github.com/opensciencegrid/council/
+site_url: https://osg-htc.org/council/
+repo_url: https://github.com/osg-htc/council/
 theme: 
   name: material
   custom_dir: theme-customizations
@@ -12,4 +12,3 @@ nav:
 
 markdown_extensions:
   - admonition
-
